src/objects/Inactive_Reason__c.object
<CustomObject><fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Programs__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Inactive_Status_Reasons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Reasons why the status has changed to inactive.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Inactive Reason</label><nameField>
        <label>Inactive Reason Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Inactive Reasons</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>